board: D-LGJ-FOLD-5 done, the stale owed-clause struck, and the gap that hid a red main
Hygiene for the two commits before it. LATEST_STATE gains the dated section
(the measured table, the group-count arm's reason, the four disable arms);
STATUS_BOARD moves D-LGJ-FOLD-5 off Queued with its numbers.

The minor-12 section's "Still owed" clause said the bricks consumer still
runs the 32-crossing path. It no longer does, so it is struck IN PLACE with
the discharge date rather than deleted -- it was true when written, and this
board is append-only. Its second clause (`lgj_hop` holding mask-sized Vecs)
stands and is still owed.

ISS-LGJ-CONSUMERS-HAVE-NO-CI-LINE is the real finding. `main` was red on a
consumer check and nothing reported it: the one workflow gates `lgj-abi`
only, so no Java compiles in CI at all, and the 612-check core suite plus the
three consumer suites are local gates run by whoever remembers. Same shape as
the r2il probe step that sat absent from lance-graph CI -- a gate that is
never dispatched is indistinguishable from no gate; there the absence was
deliberate and documented, here it is neither. The entry names why it is not
merely "add a job" (JDK 28 is preview-gated and an EA build apt does not
carry, obtained here from a GitHub release download path because the
distribution hosts are gateway-blocked -- a runner's network posture is its
own question), and carries a falsifier: re-introduce the stale pin and the
job must go red, since a job that builds the consumers without running their
mains would pass and be no-gate-with-extra-steps.

Per the board's own termination clause this commit is hygiene-only and
generates no further obligations.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01GXUahz73MZxtxWcfpHp9dG